Opened 8 years ago
Closed 8 years ago
#9273 closed bug (fixed)
[Debugger] crashes in BreakpointsView::_UpdateButtons ()
Reported by: | diver | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Debugger | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev44973 gcc2hybrid
- Launched Debugger from /system/apps
- In Teams window selected LaunchBox
- Closed main window and clicked "Kill LaunchBox" button
- Double clicked media_addon_server in Teams window
Thread 645 caused an exception: Segment violation [...] [Switching to team /boot/system/apps/Debugger (645) thread Debugger (645)] 0x0031476d in BreakpointsView::_UpdateButtons () (gdb) bt #0 0x0031476d in BreakpointsView::_UpdateButtons () #1 0x0031462c in BreakpointsView::_Init () #2 0x00313cd3 in BreakpointsView::Create () #3 0x00323f47 in TeamWindow::_Init () #4 0x003201b3 in TeamWindow::Create () #5 0x00309510 in GraphicalUserInterface::Init () #6 0x002ba78b in TeamDebugger::Init () #7 0x002b1e3c in start_team_debugger () #8 0x002b22af in Debugger::MessageReceived () #9 0x0056745f in BLooper::DispatchMessage () from /boot/system/lib/libbe.so #10 0x0055de99 in BApplication::DispatchMessage () from /boot/system/lib/libbe.so #11 0x00568dcd in BLooper::task_looper () from /boot/system/lib/libbe.so #12 0x0055c8f9 in BApplication::Run () from /boot/system/lib/libbe.so #13 0x002b2ce7 in main () (gdb)
Then I tried to reproduce by Teams->AboutSystem->Close->Kill->Debugger
Thread 784 caused an exception: Segment violation [...] [Switching to team /boot/system/apps/Debugger (784) thread Debugger (784)] 0x002b931e in TeamDebugger::~TeamDebugger () (gdb) bt #0 0x002b931e in TeamDebugger::~TeamDebugger () #1 0x002b1e83 in start_team_debugger () #2 0x002b22af in Debugger::MessageReceived () #3 0x0056745f in BLooper::DispatchMessage () from /boot/system/lib/libbe.so #4 0x0055de99 in BApplication::DispatchMessage () from /boot/system/lib/libbe.so #5 0x00568dcd in BLooper::task_looper () from /boot/system/lib/libbe.so #6 0x0055c8f9 in BApplication::Run () from /boot/system/lib/libbe.so #7 0x002b2ce7 in main () (gdb)
Change History (4)
comment:1 by , 8 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 8 years ago
Summary: | [Deskbar] crashes in BreakpointsView::_UpdateButtons () → [Debugger] crashes in BreakpointsView::_UpdateButtons () |
---|
comment:3 by , 8 years ago
Status: | assigned → in-progress |
---|
comment:4 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Note:
See TracTickets
for help on using tickets.
Both problems fixed in hrev44974.