Fix uninitialized variable that could lead to crashes.

- Fixes first part of #9273.